# standup_tracker

./: .gitignore  README.md  app.py  pyproject.toml
data/: plackett_luce_model.joblib
db/: engine.py  seed.py
models/: __init__.py  schema.py
pages/: 1_Today.py  2_People.py  3_Analytics.py  4_Settings.py
services/: attendance.py  features.py  meetings.py  passes.py  people.py  plackett_luce.py  predict.py  predict_pl.py  turns.py
utils/: cache.py
