[project]
name = "standup-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "duckdb>=1.3.2",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pydantic-settings>=2.10.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "streamlit>=1.49.1",
]
